--- a/bfd/ChangeLog
+++ b/bfd/ChangeLog
@@ -1,3 +1,9 @@
+2014-10-27  Nick Clifton  <nickc@redhat.com>
+
+	PR binutils/17510
+	* elf.c (setup_group): Improve handling of corrupt group
+	sections.
+
 2014-08-29  Alan Modra  <amodra@gmail.com>
 
 	* srec.c (srec_scan): Revert last change.  Report an error for
